<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kharche</string>
    <string name="active">Allowed Categories</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="home">Home</string>
    <string name="gift">Gift</string>
    <string name="communication">Communication</string>
    <string name="clothing">Clothing</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="balance">Balance Rs</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dec">.</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="choose">Choose Category</string>
    <string name="note">Add note</string>
    <string name="amount">Add amount</string>
    <string name="detail">More</string>
    <string name="category">Category</string>
    <string name="in">Deposit%</string>
    <string name="out">Withdraw%</string>
    <string name="savings">Fixed Savings</string>
    <string name="balanceCond">Balance Condition</string>
    <string name="change">Change</string>
    <string name="more">More</string>
    <string name="stat1">Excellent</string>
    <string name="stat2">Moderate</string>
    <string name="stat3">Average</string>
    <string name="stat4">Low</string>
    <string name="stat5">Critical</string>
    <string name="title_activity_activity4">Choose Category</string>
    <string name="title_activity_activity5">Deposit</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="help_page_intro1">Step1: Deposit your income</string>
    <string name="help_page_intro2">\nStep2: Choose category then withdraw</string>
    <string name="help_page_intro3">\nStep3: Check your balance in home page</string>
    <string name="help_page_intro4">\nThank you for using the app!</string>
    <string name="done">Done</string>

</resources>
