<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/actionBarBackground">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vampire.kharche.Activity2"
    android:background="@color/appBackground"
    android:id="@+id/r2">

        <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:background="#5C6BC0"
        android:textColor="#ffffff"
        android:onClick="ButtonToList"
        android:textSize="20dp"
        android:id="@+id/button22"
        android:width="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/editText" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw"
        android:background="#D50000"
        android:textSize="20dp"
        android:onClick="newWithdraw"
        android:textColor="#ffffff"
        android:id="@+id/button38"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="100dp"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/amount"
            android:id="@+id/editText2"
            android:layout_below="@+id/button22"
            android:layout_marginTop="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:ems="20"
            android:hint="@string/note"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</LinearLayout>