<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:background="@color/actionBarBackground">
    </android.support.v7.widget.Toolbar>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/r1"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/food"
        android:onClick="FOOD"
        android:id="@+id/button"
        android:height="60dp"
        android:width="60dp"
        android:layout_below="@+id/textView51"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/health"
        android:onClick="HEALTH"
        android:id="@+id/button2"
        android:height="60dp"
        android:width="60dp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/clothing"
        android:onClick="CLOTHING"
        android:id="@+id/button3"
        android:height="60dp"
        android:width="60dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/home"
        android:onClick="HOME"
        android:id="@+id/button4"
        android:height="60dp"
        android:width="60dp"
        android:layout_below="@+id/textView51"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/comm"
        android:onClick="COMMUNICATION"
        android:id="@+id/button5"
        android:height="60dp"
        android:width="60dp"
        android:layout_above="@+id/button6"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/ent"
        android:onClick="ENTERTAINMENT"
        android:id="@+id/button6"
        android:height="60dp"
        android:width="60dp"
        android:layout_alignTop="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/travel"
        android:onClick="TRAVEL"
        android:id="@+id/button7"
        android:height="60dp"
        android:width="60dp"
        android:layout_above="@+id/button8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/gift"
        android:onClick="GIFT"
        android:id="@+id/button8"
        android:height="60dp"
        android:width="60dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/plus"
        android:onClick="ButtonToDeposit"
        android:id="@+id/button9"
        android:height="80dp"
        android:width="80dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/minus"
        android:onClick="ButtonToWithdraw"
        android:id="@+id/button10"
        android:height="80dp"
        android:width="80dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button8"
        android:layout_toStartOf="@+id/button8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balance"
        android:id="@+id/textView11"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_above="@+id/button9"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail"

        android:id="@+id/textView"
        android:textColor="#5C6BC0"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textSize="30dp"
        android:textColor="#5C6BC0"
        android:background="#ffffff"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/active"
        android:id="@+id/textView51"
        android:textColor="#000000"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</LinearLayout>